--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,33 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+#PASSWORD MANAGER
+import random
+letters = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']
+numbers = ['0','1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '50']
+symbols = ['@', '#', '$', '%', '&', '*', '?']
+
+my_letters = int(input("enter the amount of  letters you require\n "))
+my_numbers = int(input("enter the amount of numbers you want\n"))
+my_symbols = int(input("enter the amount of symbols you require\n"))
+
+password_list = []
+
+
+
+for char in range(1, my_letters +1):
+    password_list += random.choice(letters) 
+    
+       
+for num in range(1,my_numbers +1):
+    password_list += random.choice(numbers)
+    
+for sym in range(1, my_symbols +1):
+    password_list += random.choice(symbols)
+
+
+
+random.shuffle(password_list)
+
+
+password = " "
+for char in password_list:
+    password += char
+print(f"your password is: {password}")
